# uw-madison-gi-tract-image-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: Makefile  multilabel_train.py  produce_3d_data.py
src/configs/: cfg_unet_multilabel.py  default_config.py
