[tool.poetry]
name = "uw-madison"
version = "0.0.1"
description = ""
authors = ["Vladislav <klekovkin.vladislav@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.20.0"
pandas = "1.1.0"
torch = "1.7"
torchvision = "0.8"
opencv-python = "4.5.2.54"
tqdm = "4.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
